# langchain-7days-code

./: .env.example  README.md  config.json  main.py  pyproject.toml  test_all.py
.claude/skills/wechat-series-writer/: SKILL.md
.claude/skills/wechat-series-writer/evals/workspace/iteration-1/eval-3-redis-5days/with_skill/: pyproject.toml
api/: __init__.py  day1_components.py  day2_model_io.py  day3_retrieval.py  day4_rag.py  day5_agent.py  day6_memory_chain.py  day7_review.py  main.py
chroma_db/: chroma.sqlite3
core/: __init__.py  config.py  document_loader.py  embedding.py  memory.py  rag_chain.py  retriever.py  search_tool.py  vectorstore.py
tests/: __init__.py  test_article_accuracy.py
