[project]
name = "langchain-7days"
version = "0.1.0"
description = "LangChain 7 天系统学习"
requires-python = ">=3.11"
dependencies = [
    "langchain==1.2.15",
    "langchain-core==1.3.0",
    "langchain-community==0.4.1",
    "langchain-openai==1.1.14",
    "langchain-chroma==1.1.0",
    "langchain-ollama>=0.2.0",
    "langchain-classic>=1.0.0",
    "langchain-text-splitters>=1.1.0",
    "langchain-anthropic>=0.3.0",
    "faiss-cpu>=1.7.0",
    "pypdf>=4.0.0",
    "beautifulsoup4>=4.14.3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx[socks]",
]
